<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.marcia.myapplication.view.com.example.marcia.myapplication.view.LoginActivity"
    android:background="#54d065"
    android:weightSum="1">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageViewCircular"
        android:layout_width="83dp"
        android:layout_height="78dp"
        android:layout_gravity="center"
        android:src="@drawable/novaok" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etUsuario"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:text="@string/emaildefault"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etSenha"
        android:layout_gravity="center_horizontal"
        android:hint="@string/senha"
        android:text="@string/senhadefault"
        android:gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logar"
        android:id="@+id/btLogar"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:id="@+id/tvEsqueceuSenha"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffdddd"
        android:textStyle="bold"
        android:textSize="25dp" />

</LinearLayout>
